welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: value avance is not a member of Unit
     avance();avance() avance(); avance(); avance(); avance();
                       ^